feat: implement hub synchronization and rrhh export